<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/user"
        android:enabled="true"
        android:icon="@drawable/invito"
        app:showAsAction="always"
        android:title="user" />

    <!-- MENU -->

    <item
        android:id="@+id/action_inicio"
        android:orderInCategory="100"
        android:title="@string/inicio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reserva"
        android:orderInCategory="100"
        android:title="@string/reserva"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_opciones"
        android:orderInCategory="100"
        android:title="@string/opciones"
        app:showAsAction="never" />
</menu>