<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etReservaHotel"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:clickable="false"
                android:duplicateParentState="false"
                android:ems="10"
                android:hint="@string/Usuario"
                android:inputType="textPersonName" />



            <EditText
                android:id="@+id/etTipoReservaHotel"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="44dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/TipoReserva"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/etHoraHotel"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="44dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hintHora"
                android:inputType="time"
                android:maxLines="1" />



            <EditText
                android:id="@+id/etdFechaReservaHotel"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="44dp"
                android:autofillHints=""
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/fechaEntrada"
                android:inputType="date"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etdFechaSalidaReservaHote"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="44dp"
                android:autofillHints=""
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/fechaSalida"
                android:inputType="date"
                android:maxLines="1" />


            <RadioGroup
                android:id="@+id/grupoRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <RadioButton
                    android:id="@+id/sinComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sinComida" />

                <RadioButton
                    android:id="@+id/conComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conComida" />

            </RadioGroup>

            <Button
                android:id="@+id/butReservarHotel"
                android:layout_width="372sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="40sp"
                android:layout_marginEnd="18sp"
                android:layout_marginRight="18sp"
                android:paddingVertical="20sp"
                android:text="@string/ButReservar"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>