<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservasFragment">


    <Button
        android:id="@+id/butReservarHotel"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/ButReservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTipoReservaHotel" />

    <EditText
        android:id="@+id/etReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:clickable="false"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etdFechaReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fechaEntrada"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReservaHotel" />

    <EditText
        android:id="@+id/etdFechaSalidaReservaHote"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fechaSalida"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdFechaReservaHotel" />

    <EditText
        android:id="@+id/etTipoReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/TipoReserva"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHoraHotel" />

    <EditText
        android:id="@+id/etHoraHotel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hintHora"
        android:inputType="time"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdFechaSalidaReservaHote" />

</androidx.constraintlayout.widget.ConstraintLayout>