<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoDiurno"
    tools:context=".Fragments.FormularioReservaFragment">


    <Button
        android:id="@+id/butReservarHotel"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/login_btn_reservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTipoReservaHotel" />

    <EditText
        android:id="@+id/etReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:clickable="false"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/Usuario"
        android:textColorHint="@color/textoNegro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTipoReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/TipoReserva"
        android:textColorHint="@color/textoNegro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHoraHotel" />

    <EditText
        android:id="@+id/etdFechaReservaHotel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hintFecha"
        android:textColorHint="@color/textoNegro"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReservaHotel" />

    <EditText
        android:id="@+id/etHoraHotel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hintHora"
        android:textColorHint="@color/textoNegro"
        android:inputType="time"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdFechaReservaHotel" />

</androidx.constraintlayout.widget.ConstraintLayout>