<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogotipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        app:srcCompat="@drawable/mainlogo" />

    <TextView
        android:id="@+id/tvEslogan"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="19dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/texto2"
        android:text="@string/eslogan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogotipo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEslogan" />

    <Button
        android:id="@+id/btnInvitado"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:text="@string/boton_invitado"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>